# asm2ws

./: .gitignore  .travis.yml  Makefile.in  README.md  asm.l  asm.tab.c  asm.tab.h  asm.y  asm_common.h  asm_gen.c  asm_optimize.c  common.h  compile.c  config.h.in  configure  configure.ac  disasm.c  lex.yy.c  mktest.sh  parse.c  run.c  tcc.c  test.sh  test_asm.sh  test_fail.sh  test_single.sh  vector.h  whitespace.h  wsi.c
tests/: mmltz.asm
tests/parsing/fail/: char_lf.asm  char_slash_lf.asm  push_-2^32+1.asm  push_-2^32.asm  push_2^31.asm  push_2^32-1.asm  push_2^32.asm
tests/parsing/fail/slash/: inst_slash_space_slash.asm  label_slash_space_slash.asm  lf_slash.asm  slash_eof.asm  slash_lf.asm  slash_lf_eof.asm  slash_slash.asm  sof_slash.asm
tests/parsing/pass/: char_escapes.asm  char_escapes.ws  juxtapose.asm  juxtapose.ws  push_-2^31+1.asm  push_-2^31+1.ws  push_-2^31.asm  push_-2^31.ws  push_2^31-1.asm  push_2^31-1.ws
tests/parsing/regress/fail/: char_slash_unterminated.asm  char_unescaped_quote.asm  integer_as_label_ref.asm  label_ref_as_integer.asm
tests/parsing/regress/pass/: ignored_line_comment.asm  ignored_line_comment.ws  label_sort_freq.asm  label_sort_freq.ws  label_sort_unstable.asm  label_sort_unstable.ws  no_final_lf.asm  no_final_lf.ws
tests/ws-build-run/: divc.asm  divc.asm.ws.in  mmltz.asm.ws.in  rep_putc.asm  rep_putn.asm
tests/ws-rebuild/: binary.bak  binary.ws  binary.ws.asm.ws.in  binary.ws.asm.ws.out  copy.bak  copy.ws  doubler.ws  halve.bak  halve.ws  hanoi.ws.asm.ws.out  slide.bak  slide.ws
tests/ws-run/: cellsize.ws.out  duplabel.ws  fact.ws.out  nerd.ws.out  spec_zero.ws
